--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio of Rafsana Kabir Samanta</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome To</h1> 
+            <h1> <span class="name_title">Rafsana Kabir</span> World</h1>
+            <h3>User Experience & User Interface Designer</h3>
+            <p>Hi, I'm Rafsana User Experience and User Interface Designer with a passion for designing beautiful and functional User Experiences . I shape technology into products that carry us over hurdles large and small so that we can live better, more fulfilled lives - with our friends,work,and beyond .</p>
+            </div>
+            <div><img src="images/main-img.png" alt="main-img"></div>
+    </section>
 </body>
 </html>
