--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 <body>
     <section>
-        <div>
+        <div class="sec1_lft_txt">
             <h1>Welcome To</h1> 
-            <h1> <span class="name_title">Rafsana Kabir</span> World</h1>
+            <h1> <span class="name_title">Rafsana Kabir</span> World!</h1>
             <h3>User Experience & User Interface Designer</h3>
             <p>Hi, I'm Rafsana User Experience and User Interface Designer with a passion for designing beautiful and functional User Experiences . I shape technology into products that carry us over hurdles large and small so that we can live better, more fulfilled lives - with our friends,work,and beyond .</p>
+            <a class="link_button" target="_blank" href="https://www.linkedin.com/in/rafsana-kabir-samanta-64a38720a">HIRE ME</a>
             </div>
-            <div><img src="images/main-img.png" alt="main-img"></div>
+            <div class="sec1_img"><img src="images/main-img.png" alt="main-img"></div>
     </section>
 </body>
 </html>
