--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="sec1">
         <div class="sec1_lft_txt">
             <h1>Welcome To</h1> 
             <h1> <span class="name_title">Rafsana Kabir</span> World!</h1>
