--- a/index.html
+++ b/index.html
@@ -12,14 +12,36 @@
 </head>
 <body>
     <section class="sec1">
-        <div class="sec1_lft_txt">
+        <div class="half_width">
             <h1>Welcome To</h1> 
             <h1> <span class="name_title">Rafsana Kabir</span> World!</h1>
             <h3>User Experience & User Interface Designer</h3>
             <p>Hi, I'm Rafsana User Experience and User Interface Designer with a passion for designing beautiful and functional User Experiences . I shape technology into products that carry us over hurdles large and small so that we can live better, more fulfilled lives - with our friends,work,and beyond .</p>
             <a class="link_button" target="_blank" href="https://www.linkedin.com/in/rafsana-kabir-samanta-64a38720a">HIRE ME</a>
             </div>
-            <div class="sec1_img"><img src="images/main-img.png" alt="main-img"></div>
+            <div class="half_width">
+                <img src="images/main-img.png" alt="main-img">
+            </div>
     </section>
+
+    <section class="sec2">
+        <div class="half_width">
+            <img src="images/sub-img.png" alt="">
+        </div>
+
+        <div class="half_width">
+            <div class="txt">
+                <h2>Dream Big</h2>
+            <h3>Become a Full Stack Web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            </div>
+            <a class="link_button" target="_blank" href="https://www.linkedin.com/in/rafsana-kabir-samanta-64a38720a">DOWNLOAD RESUME</a>
+
+        </div>
+        
+
+    </section>
+
+    
 </body>
 </html>
