footer and bottom done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="sec1">
+    <section class="sec1 flexible_container">
         <div class="half_width">
             <h1>Welcome To</h1> 
             <h1> <span class="name_title">Rafsana Kabir</span> World!</h1>
@@ -24,7 +24,7 @@
             </div>
     </section>
 
-    <section class="sec2">
+    <section class="sec2 flexible_container">
         <div class="half_width">
             <img src="images/sub-img.png" alt="">
         </div>
@@ -42,6 +42,27 @@
 
     </section>
 
+    <section class="sec3">
+        <h2>Experiences</h2>
+        <div class="flexible_container">
+            <div id="design" class="exp_item">
+                <h2>UI-UX Designer</h2>
+                <h3 class="org_colr">2021-Present | Mid Level Designer</h3>
+                <p>I bring an Engineering perspective and creative problem-solving approach to create products and experiences people love to use. Persistence, curiosity and an obsessive attention to detail defime me.With a background in Information Tecnology I am competent i all aspects of the design process .</p>
+            </div>
     
+            <div id="web_dev" class="exp_item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="org_colr">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>© Rafsana Kabir Samanta 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
